finished homepage, button components

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <img src="" alt="Harbor Arms Logo">
-      <button class="request-button" type="button" name="button">REQUEST ROOM</button>
+      <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
 
     <main class="content" id="main-homepage">
@@ -39,14 +39,13 @@
           <p>Stay at our comfortable aparment style
           hotel and experience the comforts of home.</p>
 
-          <button class="home-stay main-button" type="button" name="come stay with us">COME STAY WITH US</button>
+          <a href="#" class="home-stay main-button" role="button">come stay with us</a>
         </div>
 
         <div class="homepage-grid">
-          <button class="home-guests" type="button" name="button">GUESTS</button>
-
           <div class="descriptions-image military-map-image">
             <img src="" alt="military base image">
+            <a href="#" class="button home-guests" role="button">guests</a>
           </div>
 
           <div class="description location">
@@ -55,13 +54,12 @@
 
           <div class="descriptions-image room-image">
             <img src="" alt="hotel image">
+            <a href="#" class="button home-accommodations" role="button">accommodations</a>
           </div>
 
           <div class="description rooms">
             <p>All of our rooms include separate bedroom(s), living space, and kitchen. Perfect for longer stays.</p>
           </div>
-
-          <button class="home-accommodations" type="button" name="button">ACCOMMODATIONS</button>
         </div>
 
         <div class="description extra">
@@ -106,7 +104,7 @@
           </div>
         </div>
 
-        <button class="main-button"type="button" name="button">EXPLORE LIKE A LOCAL</button>
+        <a href="#" class="main-button" role="button">explore like a local</a>
       </section>
 
       <footer>
