started guest page

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <nav class="nav mobile">
         <ul class="toggle-nav">
           <li><a href="#">ACCOMMODATIONS</a></li>
-          <li><a href="guest.html">GUESTS</a></li>
+          <li><a href="guests.html">GUESTS</a></li>
           <li><a href="#">EXPERIENCE</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
