got toggle nav working

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
         <span></span>
       </a>
       <a href="#" class="active">
-        <span></span>
-        <span></span>
+        <div class="active-toggle">
+          <span></span>
+          <span></span>
+        </div>
       </a>
 
       <nav class="nav mobile">
