--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,13 @@
 
   <body>
     <header>
-      <a href="#" class="toggle">
+      <!-- <a href="#" class="toggle">
         <span></span>
         <span></span>
       </a>
       <a href="#" class="active">
-        <div class="active-toggle">
-          <span></span>
-          <span></span>
-        </div>
+        <span></span>
+        <span></span>
       </a>
 
       <nav class="nav mobile">
@@ -27,7 +25,25 @@
           <li><a href="#">EXPERIENCE</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
+      </nav> -->
+
+      <nav class="toggle mobile .slide-in">
+        <div class="toggle_button">
+          <a href="#"><span class="bottom"></span></a>
+          <a href="#"><span class="short"></span></a>
+          <a href="#"><span class="top"></span></a>
+        </div>
+
+        <ul>
+          <a href="#"><img src="" alt=""></a>
+          <li><a href="accommodations.html">accommodations</a></li>
+          <li><a href="guests.html">guests</a></li>
+          <li><a href="experience.html">experience</a></li>
+          <li><a href="contact.html">contact</a></li>
+          <!-- <li><a href="#">contact</a></li> -->
+        </ul>
       </nav>
+
       <img src="" alt="Harbor Arms Logo">
       <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
