--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,6 @@
 
   <body>
     <header>
-      <!-- <a href="#" class="toggle">
-        <span></span>
-        <span></span>
-      </a>
-      <a href="#" class="active">
-        <span></span>
-        <span></span>
-      </a>
-
-      <nav class="nav mobile">
-        <ul class="toggle-nav">
-          <li><a href="#">ACCOMMODATIONS</a></li>
-          <li><a href="guests.html">GUESTS</a></li>
-          <li><a href="#">EXPERIENCE</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav> -->
-
       <nav class="toggle mobile .slide-in">
         <div class="toggle_button">
           <a href="#"><span class="bottom"></span></a>
@@ -44,7 +26,7 @@
         </ul>
       </nav>
 
-      <img src="" alt="Harbor Arms Logo">
+      <a href="index.html"><img src="" alt="Harbor Arms Logo"></a>
       <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
 
@@ -102,7 +84,7 @@
     <main class="content" id="main-homepage">
 
       <section class="welcome homepage" id="welcome-message">
-        <div class="homepage-header-image">
+        <div class="header-image">
           <img src="" alt="hotel image">
         </div>
 
@@ -159,7 +141,6 @@
             <img src="" alt="hotel image">
           </div>
         </div>
-
       </section>
 
       <section class="experience homepage" id="experience-homepage">
@@ -179,83 +160,82 @@
 
         <a href="#" class="main-button" role="button">explore like a local</a>
       </section>
-
-      <footer>
-        <section class="footer-content">
-          <img src="" alt="harbor arms logo">
-          <div class="footer-address">
-            <p class="footer-text">98-130 LIPOA PLACE
-              <br>AIEA, HAWAII 96701</p>
-            <p class="footer-text hours">HOURS</p>
-            <p class="footer-text">Mon-Sat 8am-5pm</p>
-            <p class="footer-text">Sun 9am-12pm</p>
-          </div>
-
-          <div class="footer-contact-info">
-            <p class="footer-text header">CONTACT</p>
-            <a href="#"><p class="footer-text">reservations@harborarms.com</p></a>
-            <a href="#"><p class="footer-text">information@harborarms.com</p></a>
-            <p class="footer-text phone">PH:  (808) 488-5556
-              <br>TOLL FREE:  (800) 360-5556
-              <br>FAX:  (808) 488-8385</p>
-          </div>
-          <p class="copyright">&copy Copyright 2009 Harbor Arms Apartment Hotel</p>
-        </section>
-
-        <section class="footer-form">
-          <h3>GET IN TOUCH</h3>
-          <form class="footer-form-contact" action="#" method="post" enctype="multipart/form-data">
-            <div class="footer-form-section">
-              <div class="row">
-  		          <label for="name">NAME</label><br />
-  		          <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
-  	          </div>
-              <div class="row">
-            		<label for="company">COMPANY</label><br />
-            		<input id="company" class="input" name="company" type="text" value="" size="30" /><br />
-            	</div>
-            	<div class="row">
-            		<label for="email">EMAIL</label><br />
-            		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
-            	</div>
-              <div class="row">
-            		<label for="phone">PHONE</label><br />
-            		<input id="phone" class="input" name="phone" type="text" value="" size="30" /><br />
-            	</div>
-              <div class="row">
-            		<label for="fax">FAX</label><br />
-            		<input id="fax" class="input" name="fax" type="text" value="" size="30" /><br />
-            	</div>
-            </div>
-
-            <div class="footer-form-section">
-              <div class="row">
-            		<label for="checkin">CHECK IN</label><br />
-            		<input id="checkin" class="input" name="checkin" type="text" value="" size="30" /><br />
-            	</div>
-              <div class="row">
-            		<label for="checkout">CHECK OUT</label><br />
-            		<input id="checkout" class="input" name="checkout" type="text" value="" size="30" /><br />
-            	</div>
-              <div class="row">
-            		<label for="adults">ADULTS</label><br />
-            		<input id="adults" class="input" name="adults" type="text" value="" size="30" /><br />
-            	</div>
-              <div class="row">
-            		<label for="children">CHILDREN</label><br />
-            		<input id="children" class="input" name="children" type="text" value="" size="30" /><br />
-            	</div>
-            	<div class="row">
-            		<label for="message">MESSAGE</label><br />
-            		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
-            	</div>
-            	<input id="submit_button" type="submit" value="SUBMIT" />
-            </div>
-          </form>
-        </section>
-      </footer>
-
     </main>
+
+    <footer>
+      <section class="footer-content">
+        <img src="" alt="harbor arms logo">
+        <div class="footer-address">
+          <p class="footer-text">98-130 LIPOA PLACE
+            <br>AIEA, HAWAII 96701</p>
+          <p class="footer-text hours">HOURS</p>
+          <p class="footer-text">Mon-Sat 8am-5pm</p>
+          <p class="footer-text">Sun 9am-12pm</p>
+        </div>
+
+        <div class="footer-contact-info">
+          <p class="footer-text header">CONTACT</p>
+          <a href="#"><p class="footer-text">reservations@harborarms.com</p></a>
+          <a href="#"><p class="footer-text">information@harborarms.com</p></a>
+          <p class="footer-text phone">PH:  (808) 488-5556
+            <br>TOLL FREE:  (800) 360-5556
+            <br>FAX:  (808) 488-8385</p>
+        </div>
+        <p class="copyright">&copy Copyright 2009 Harbor Arms Apartment Hotel</p>
+      </section>
+
+      <section class="footer-form">
+        <h3>GET IN TOUCH</h3>
+        <form class="footer-form-contact" action="#" method="post" enctype="multipart/form-data">
+          <div class="footer-form-section">
+            <div class="row">
+              <label for="name">NAME</label><br />
+              <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="company">COMPANY</label><br />
+              <input id="company" class="input" name="company" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="email">EMAIL</label><br />
+              <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="phone">PHONE</label><br />
+              <input id="phone" class="input" name="phone" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="fax">FAX</label><br />
+              <input id="fax" class="input" name="fax" type="text" value="" size="30" /><br />
+            </div>
+          </div>
+
+          <div class="footer-form-section">
+            <div class="row">
+              <label for="checkin">CHECK IN</label><br />
+              <input id="checkin" class="input" name="checkin" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="checkout">CHECK OUT</label><br />
+              <input id="checkout" class="input" name="checkout" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="adults">ADULTS</label><br />
+              <input id="adults" class="input" name="adults" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="children">CHILDREN</label><br />
+              <input id="children" class="input" name="children" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="message">MESSAGE</label><br />
+              <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+            </div>
+            <input id="submit_button" type="submit" value="SUBMIT" />
+          </div>
+        </form>
+      </section>
+    </footer>
 
 
 
