--- a/src/guests.html
+++ b/src/guests.html
@@ -26,9 +26,51 @@
         </ul>
       </nav>
 
-      <img src="" alt="Harbor Arms Logo">
+      <a href="index.html"><img src="" alt="Harbor Arms Logo"></a>
       <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
+
+    <main class="content guests-page" id="main-guests">
+      <div class="header-image">
+        <img src="" alt="hotel image">
+      </div>
+
+      <section class="guests" id="guests-subpage">
+        <h1>guests</h1>
+        <h2>Doing contract work at Pearl Harbor or elsewhere on Oahu?</h2>
+        <p>Our close proximity to Pearl Harbor and many job sites makes us the ideal choice for Contractors working at military bases or in the Central Oahu area</p>
+      </section>
+
+      <div class="descriptions-image military-map-image">
+        <img src="" alt="military base image">
+      </div>
+
+      <section class="guests-tla" id="guests-tla-subpage">
+        <h2>TLA approved</h2>
+        <p class="sub-subhead">What is TLA</p>
+        <p>Temporary Lodging Allowance (TLA) is a partial reimbursement of your expenses for lodging and meals when you are (PCS) permanent change of station, to Hawaii, or out of Hawaii. You are authorized TLA if you are active duty, and cannot be lodged at the BEQ / BOQ; or active duty, and report with your family, and they are command sponsored</p>
+
+        <p>When you arrive, TLA usually is given in 10 day increments, based upon your family size and the type of lodging facility you stay at. It must be a TLA Approved Facility, and that is exactly what Harbor Arms Apartment Hotel is. Your allowance also depends on if the facility has an adequate kitchen which we also have.</p>
+
+        <p><span>Remember!</span>- After arrival, you have 72 hours to report to your command to be authorized TLA.</p>
+
+        <p class="sub-subhead two">Harbor Arms Apartment Hotel has been helping military families with their move to Hawaii for over 35 years so make a reservation today or email us with any Military TLA questions.</p>
+      </section>
+
+      <div class="descriptions-image military-map-image">
+        <img src="" alt="image">
+      </div>
+
+      <section class="experience guestpage" id="experience-guestpage">
+        <h1>Here Just For Fun?</h1>
+        <h2 class="cursive-subhead">Experience Oahu like a Local</h2>
+        <p>If you are a tourist visiting the islands and are looking for a clean, quiet alternative to the prices of Waikiki look no further than Harbor Arms Hotel. We are only minutes from the airport and Pearlridge Shopping Center and close by to restaurants, theatres and golf.</p>
+
+        <p>Centrally located we are only 30 minutes to the North Shore, 20 minutes to beautiful Windward Oahu and still only a 20 minute drive to Ala Moana Shopping Center and Waikiki.</p>
+
+        <a href="#" class="main-button" role="button">explore now</a>
+      </section>
+    </main>
 
 
 
