--- a/accommodations.html
+++ b/accommodations.html
@@ -30,45 +30,110 @@
       <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
 
-    <main class="content guests-page" id="main-guests">
+    <main class="content accommodations-page" id="main-accommodations">
       <div class="header-image">
         <img src="" alt="hotel image">
       </div>
 
-      <section class="guests" id="guests-subpage">
-        <h1>guests</h1>
-        <h2>Doing contract work at Pearl Harbor or elsewhere on Oahu?</h2>
-        <p>Our close proximity to Pearl Harbor and many job sites makes us the ideal choice for Contractors working at military bases or in the Central Oahu area</p>
+      <section class="accommodations" id="accommodations-subpage">
+        <h1>accommodations</h1>
+        <h2>Experience home living in paradise at the Harbor Arms Apartment Hotel with:</h2>
+
+        <div class="description extra">
+          <div class="highlights">
+            <div class="highlights-wifi">
+              <p class="highlights-content">Free WIFI
+                <br>+
+                <br>Flat Screen TV with Basic Cable & HBO</p>
+            </div>
+
+            <div class="highlights-parking">
+              <p class="highlights-content">Free Parking</p>
+            </div>
+
+            <div class="highlights-pool">
+              <p class="highlights-content">Access to Onsite BBQ Pit & Swimming Pool</p>
+            </div>
+
+            <p class="accommodations-room-description">Each of our one and two bedroom suites also comes fully furnished with separate living quarters and a fully equipped kitchen featuring a four burner stove with oven, microwave oven, toaster, full sized refrigerator, and coffee maker. </p>
+          </div>
       </section>
 
-      <div class="descriptions-image military-map-image">
-        <img src="" alt="military base image">
-      </div>
+      <section class="accommodations-room-images">
+        <div class="accomm-main-image">
+          <img src="" alt="room-main-image">
+        </div>
 
-      <section class="guests-tla" id="guests-tla-subpage">
-        <h2>TLA approved</h2>
-        <p class="sub-subhead">What is TLA</p>
-        <p>Temporary Lodging Allowance (TLA) is a partial reimbursement of your expenses for lodging and meals when you are (PCS) permanent change of station, to Hawaii, or out of Hawaii. You are authorized TLA if you are active duty, and cannot be lodged at the BEQ / BOQ; or active duty, and report with your family, and they are command sponsored</p>
+        <div class="accomm-sub-images">
+          <img src="" alt="room-one">
+          <img src="" alt="room-two">
+          <img src="" alt="room-three">
+        </div>
 
-        <p>When you arrive, TLA usually is given in 10 day increments, based upon your family size and the type of lodging facility you stay at. It must be a TLA Approved Facility, and that is exactly what Harbor Arms Apartment Hotel is. Your allowance also depends on if the facility has an adequate kitchen which we also have.</p>
+        <div class="room-info">
+          <p class="room-name">ONE BEDROOM SUITE</p>
+          <p>1 Full + 1 Full Sofabed</p>
 
-        <p><span>Remember!</span> - After arrival, you have 72 hours to report to your command to be authorized TLA.</p>
-
-        <p class="sub-subhead two">Harbor Arms Apartment Hotel has been helping military families with their move to Hawaii for over 35 years so make a reservation today or email us with any Military TLA questions.</p>
+          <a href="#" class="main-button" role="button">request now</a>
+        </div>
       </section>
 
-      <div class="descriptions-image military-map-image">
+      <section class="accommodations-room-images">
+        <div class="accomm-main-image">
+          <img src="" alt="room-main-image">
+        </div>
+
+        <div class="accomm-sub-images">
+          <img src="" alt="room-one">
+          <img src="" alt="room-two">
+          <img src="" alt="room-three">
+        </div>
+
+        <div class="room-info">
+          <p class="room-name">TWO BEDROOM SUITE</p>
+          <p>2 Fulls+ 1 Twin + 1 Full Sofabed
+            <br><span>OR</span><br>
+            1 Full+ 2 Twins + 1 Full Sofabed</p>
+
+          <a href="#" class="main-button" role="button">request now</a>
+        </div>
+      </section>
+
+      <div class="descriptions-image amenities-image">
         <img src="" alt="image">
       </div>
 
-      <section class="experience guestpage" id="experience-guestpage">
-        <h1>Here Just For Fun?</h1>
-        <h2 class="cursive-subhead">Experience Oahu like a Local</h2>
-        <p>If you are a tourist visiting the islands and are looking for a clean, quiet alternative to the prices of Waikiki look no further than Harbor Arms Hotel. We are only minutes from the airport and Pearlridge Shopping Center and close by to restaurants, theatres and golf.</p>
+      <section class="amenities">
+        <h1>amenities</h1>
+        <div class="amenities-list">
+          <p class="sub-subhead">In-Room</p>
+          <ul>
+            <li>Free High Speed WIFI</li>
+            <li>Flat Screen TV with Free Basic Cable + HBO</li>
+            <li>Free Local Phone Calls</li>
+            <li>Air Conditioning</li>
+            <li>Full Kitchen with Four Burner Stove and Oven</li>
+            <li>Full Sized Refrigerator</li>
+            <li>Microwave + Toaster </li>
+            <li>Coffee Maker</li>
+            <li>Cookware + Dishware + Silverware</li>
+            <li>Private Lanai/Patio</li>
+            <li>Tub/Shower Bath</li>
+            <li>Iron + Ironing Board</li>
+            <li>Maid Service</li>
+          </ul>
+        </div>
 
-        <p>Centrally located we are only 30 minutes to the North Shore, 20 minutes to beautiful Windward Oahu and still only a 20 minute drive to Ala Moana Shopping Center and Waikiki.</p>
-
-        <a href="#" class="main-button" role="button">explore now</a>
+        <div class="amenities-list">
+          <p class="sub-subhead">On-Site</p>
+          <ul>
+            <li>Free High Speed WIFI</li>
+            <li>Free Parking</li>
+            <li>Swimming Pool + Sun Deck</li>
+            <li>BBQ Grill</li>
+            <li>Laundromat</li>
+          </ul>
+        </div>
       </section>
     </main>
 
@@ -148,6 +213,8 @@
           </form>
         </section>
       </footer>
+
+
 
 
 
