--- a/src/accommodations.html
+++ b/src/accommodations.html
@@ -107,12 +107,15 @@
         <h1>amenities</h1>
         <div class="amenities-list">
           <p class="sub-subhead">In-Room</p>
+          <div class="sub-subhead-underline">
+
+          </div>
           <ul>
             <li>Free High Speed WIFI</li>
             <li>Flat Screen TV with Free Basic Cable + HBO</li>
             <li>Free Local Phone Calls</li>
             <li>Air Conditioning</li>
-            <li>Full Kitchen with Four Burner Stove and Oven</li>
+            <li>Full Kitchen with Four Burner Stove + Oven</li>
             <li>Full Sized Refrigerator</li>
             <li>Microwave + Toaster </li>
             <li>Coffee Maker</li>
@@ -126,6 +129,9 @@
 
         <div class="amenities-list">
           <p class="sub-subhead">On-Site</p>
+          <div class="sub-subhead-underline">
+
+          </div>
           <ul>
             <li>Free High Speed WIFI</li>
             <li>Free Parking</li>
