--- a/src/contact.html
+++ b/src/contact.html
@@ -30,114 +30,110 @@
       <button class="request-button" type="button" role="button" name="button">REQUEST ROOM</button>
     </header>
 
-    <main class="content accommodations-page" id="main-accommodations">
+    <main class="content contact-page" id="main-contact">
       <div class="header-image">
         <img src="" alt="hotel image">
       </div>
 
-      <section class="accommodations" id="accommodations-subpage">
-        <h1>accommodations</h1>
-        <h2>Experience home living in paradise at the Harbor Arms Apartment Hotel with:</h2>
+      <section class="contact" id="contact-subpage">
+        <h1>contact</h1>
+        <h2>Interested in staying with us? Have questions? Let us know here and we’ll get back to you as quickly as possible.</h2>
+      </section>
 
-        <div class="description extra">
-          <div class="highlights">
-            <div class="highlights-wifi">
-              <p class="highlights-content">Free WIFI
-                <br>+
-                <br>Flat Screen TV with Basic Cable & HBO</p>
+      <section class="main-contact">
+        <form class="main-contact-form" action="#" method="post" enctype="multipart/form-data">
+          <div class="footer-form-section">
+            <div class="row">
+              <label for="name">NAME</label><br />
+              <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
             </div>
-
-            <div class="highlights-parking">
-              <p class="highlights-content">Free Parking</p>
+            <div class="row">
+              <label for="company">COMPANY</label><br />
+              <input id="company" class="input" name="company" type="text" value="" size="30" /><br />
             </div>
-
-            <div class="highlights-pool">
-              <p class="highlights-content">Access to Onsite BBQ Pit & Swimming Pool</p>
+            <div class="row">
+              <label for="email">EMAIL</label><br />
+              <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
             </div>
-
-            <p class="accommodations-room-description">Each of our one and two bedroom suites also comes fully furnished with separate living quarters and a fully equipped kitchen featuring a four burner stove with oven, microwave oven, toaster, full sized refrigerator, and coffee maker. </p>
+            <div class="row row-split">
+              <label for="phone">PHONE</label><br />
+              <input id="phone" class="input" name="phone" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row row-split last">
+              <label for="fax">FAX</label><br />
+              <input id="fax" class="input" name="fax" type="text" value="" size="30" /><br />
+            </div>
           </div>
-      </section>
 
-      <section class="accommodations-room-images">
-        <div class="accomm-main-image">
-          <img src="" alt="room-main-image">
-        </div>
-
-        <div class="accomm-sub-images">
-          <img src="" alt="room-one">
-          <img src="" alt="room-two">
-          <img src="" alt="room-three">
-        </div>
-
-        <div class="room-info">
-          <p class="room-name">ONE BEDROOM SUITE</p>
-          <p>1 Full + 1 Full Sofabed</p>
-
-          <a href="#" class="main-button" role="button">request now</a>
-        </div>
-      </section>
-
-      <section class="accommodations-room-images">
-        <div class="accomm-main-image">
-          <img src="" alt="room-main-image">
-        </div>
-
-        <div class="accomm-sub-images">
-          <img src="" alt="room-one">
-          <img src="" alt="room-two">
-          <img src="" alt="room-three">
-        </div>
-
-        <div class="room-info">
-          <p class="room-name">TWO BEDROOM SUITE</p>
-          <p>2 Fulls+ 1 Twin + 1 Full Sofabed
-            <br><span>OR</span><br>
-            1 Full+ 2 Twins + 1 Full Sofabed</p>
-
-          <a href="#" class="main-button" role="button">request now</a>
-        </div>
+          <div class="footer-form-section">
+            <div class="row row-split">
+              <label for="checkin">CHECK IN</label><br />
+              <input id="checkin" class="input" name="checkin" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row row-split last">
+              <label for="checkout">CHECK OUT</label><br />
+              <input id="checkout" class="input" name="checkout" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row row-split">
+              <label for="adults">ADULTS</label><br />
+              <input id="adults" class="input" name="adults" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row row-split last">
+              <label for="children">CHILDREN</label><br />
+              <input id="children" class="input" name="children" type="text" value="" size="30" /><br />
+            </div>
+            <div class="row">
+              <label for="message">MESSAGE</label><br />
+              <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+            </div>
+            <input class="main-contact-submit main-button" id="submit_button" type="submit" value="REQUEST NOW" />
+          </div>
+        </form>
       </section>
 
       <div class="descriptions-image amenities-image">
         <img src="" alt="image">
       </div>
 
-      <section class="amenities">
-        <h1>amenities</h1>
-        <div class="amenities-list">
-          <p class="sub-subhead">In-Room</p>
+      <section class="nearby">
+        <h1>we're nearby</h1>
+        <a href="#" class="button home-guests" role="button">get directions</a>
+        <div class="nearby-list">
+          <p class="sub-subhead">Nearby Bases</p>
           <div class="sub-subhead-underline">
 
           </div>
           <ul>
-            <li>Free High Speed WIFI</li>
-            <li>Flat Screen TV with Free Basic Cable + HBO</li>
-            <li>Free Local Phone Calls</li>
-            <li>Air Conditioning</li>
-            <li>Full Kitchen with Four Burner Stove + Oven</li>
-            <li>Full Sized Refrigerator</li>
-            <li>Microwave + Toaster </li>
-            <li>Coffee Maker</li>
-            <li>Cookware + Dishware + Silverware</li>
-            <li>Private Lanai/Patio</li>
-            <li>Tub/Shower Bath</li>
-            <li>Iron + Ironing Board</li>
-            <li>Maid Service</li>
+            <li>10 minute drive to <span>Daniel K Inouye International Airport</span></li>
+            <li>15 minute drive to <span>Camp Smith</span></li>
+            <li>15 minute drive to <span>Fort Shafter</span></li>
+            <li>15 minute drive to <span>Navy Exchange</span></li>
+            <li>15 minute drive to <span>Pearl Harbor</span></li>
+            <li>15 minute drive to <span>Tripler Army Medical Center</span></li>
+            <li>15 minute drive to <span>HIckam AFB</span></li>
+            <li>18 minute drive to <span>Capital Place</span></li>
+            <li>20 minute drive to <span>Wheeler Army Airfield</span></li>
+            <li>25 minute drive to <span>Schofield Barracks</span></li>
+            <li>30 minute drive to <span>US Coast Gaurd Barbers Point</span></li>
+            <li>35 minute drive to <span>Kaneohe Marine Corps Base</span></li>
           </ul>
         </div>
 
-        <div class="amenities-list">
-          <p class="sub-subhead">On-Site</p>
+        <div class="nearby-list">
+          <p class="sub-subhead">Nearby Attractions</p>
           <div class="sub-subhead-underline">
 
           </div>
           <ul>
-            <li>Free High Speed WIFI</li>
-            <li>Free Parking</li>
-            <li>Swimming Pool + Sun Deck</li>
-            <li>BBQ Grill</li>
-            <li>Laundromat</li>
+            <li>5 minute walk to <span>Pearlridge Shopping Center</span></li>
+            <li>5 minute drive to <span>Pearl Country Club</span></li>
+            <li>10 minute drive to <span>Daniel K Inouye International Airport</span></li>
+            <li>10 minute drive to <span>Aloha Stadium</span></li>
+            <li>15 minute drive to <span>USS Arizona Memorial</span></li>
+            <li>15 minute drive to <span>Waikele Premium Outlets</span></li>
+            <li>20 minute drive to <span>Ala Moana Shopping Center</span></li>
+            <li>25 minute drive to <span>Waikiki</span></li>
+            <li>30 minute drive to <span>North Shore</span></li>
           </ul>
         </div>
       </section>
