contact form testing

--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
 
       <section class="footer-form">
         <h3>GET IN TOUCH</h3>
-        <form class="footer-form-contact" action="#" method="post" enctype="multipart/form-data">
+        <form class="footer-form-contact" action="form-to-email.php" method="post" enctype="multipart/form-data">
           <div class="footer-form-section">
             <div class="row">
               <label for="name">NAME</label><br />
@@ -240,6 +240,7 @@
 
 
     <!-- Insert any outside scripts here -->
+    <?php include 'form-to-email.php';?>
 
     <!-- This script tag goes last -->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
