--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en-US">
+
+  <script language="JavaScript" src="gen_validatorv31.js" type="text/javascript"></script>
+
   <head>
     <meta charset="utf-8">
     <title>Harbor Arms Apartment Hotel</title>
@@ -41,49 +44,49 @@
       </section>
 
       <section class="main-contact">
-        <form class="main-contact-form" action="#" method="post" enctype="multipart/form-data">
+        <form class="main-contact-form" action="form-to-email.php" method="post" name="myemailform" enctype="multipart/form-data">
           <div class="footer-form-section">
             <div class="row">
               <label for="name">NAME</label><br />
-              <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+              <input id="name" class="input" name="name" type="text" value="" size="30" required/><br />
             </div>
             <div class="row">
-              <label for="company">COMPANY</label><br />
+              <label for="company">COMPANY (optional)</label><br />
               <input id="company" class="input" name="company" type="text" value="" size="30" /><br />
             </div>
             <div class="row">
               <label for="email">EMAIL</label><br />
-              <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+              <input id="email" class="input" name="email" type="email" value="" size="30" required/><br />
             </div>
             <div class="row row-split">
               <label for="phone">PHONE</label><br />
-              <input id="phone" class="input" name="phone" type="text" value="" size="30" /><br />
+              <input id="phone" class="input" name="phone" type="tel" value="" size="30" required/><br />
             </div>
             <div class="row row-split last">
-              <label for="fax">FAX</label><br />
-              <input id="fax" class="input" name="fax" type="text" value="" size="30" /><br />
+              <label for="fax">FAX (optional)</label><br />
+              <input id="fax" class="input" name="fax" type="tel" value="" size="30" /><br />
             </div>
           </div>
 
           <div class="footer-form-section">
             <div class="row row-split">
               <label for="checkin">CHECK IN</label><br />
-              <input id="checkin" class="input" name="checkin" type="text" value="" size="30" /><br />
+              <input id="checkin" class="input" name="checkin" type="date" value="" size="30" required/><br />
             </div>
             <div class="row row-split last">
               <label for="checkout">CHECK OUT</label><br />
-              <input id="checkout" class="input" name="checkout" type="text" value="" size="30" /><br />
+              <input id="checkout" class="input" name="checkout" type="date" value="" size="30" required/><br />
             </div>
             <div class="row row-split">
               <label for="adults">ADULTS</label><br />
-              <input id="adults" class="input" name="adults" type="text" value="" size="30" /><br />
+              <input id="adults" class="input" name="adults" type="text" value="" size="30" required/><br />
             </div>
             <div class="row row-split last">
               <label for="children">CHILDREN</label><br />
-              <input id="children" class="input" name="children" type="text" value="" size="30" /><br />
+              <input id="children" class="input" name="children" type="text" value="" size="30" required/><br />
             </div>
             <div class="row">
-              <label for="message">MESSAGE</label><br />
+              <label for="message">MESSAGE (optional)</label><br />
               <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
             </div>
             <input class="main-contact-submit main-button" id="submit_button" type="submit" value="REQUEST NOW" />
@@ -223,6 +226,16 @@
     <!-- Insert any outside scripts here -->
 
     <!-- This script tag goes last -->
+    <script language="JavaScript">
+    // Code for validating the form
+    // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
+    // for details
+    var frmvalidator  = new Validator("myemailform");
+    frmvalidator.addValidation("name","req","Please provide your name");
+    frmvalidator.addValidation("email","req","Please provide your email");
+    frmvalidator.addValidation("email","email","Please enter a valid email address");
+    </script>
+
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="script.js"></script>
   </body>
