--- a/src/contact.html
+++ b/src/contact.html
@@ -48,7 +48,7 @@
           <div class="footer-form-section">
             <div class="row">
               <label for="name">NAME</label><br />
-              <input id="name" class="input" name="name" type="text" value="" size="30" required/><br />
+              <input id="name" class="input" name="name" type="text" value="" size="30"/><br />
             </div>
             <div class="row">
               <label for="company">COMPANY (optional)</label><br />
@@ -56,11 +56,11 @@
             </div>
             <div class="row">
               <label for="email">EMAIL</label><br />
-              <input id="email" class="input" name="email" type="email" value="" size="30" required/><br />
+              <input id="email" class="input" name="email" type="email" value="" size="30"/><br />
             </div>
             <div class="row row-split">
               <label for="phone">PHONE</label><br />
-              <input id="phone" class="input" name="phone" type="tel" value="" size="30" required/><br />
+              <input id="phone" class="input" name="phone" type="tel" value="" size="30"/><br />
             </div>
             <div class="row row-split last">
               <label for="fax">FAX (optional)</label><br />
@@ -71,19 +71,19 @@
           <div class="footer-form-section">
             <div class="row row-split">
               <label for="checkin">CHECK IN</label><br />
-              <input id="checkin" class="input" name="checkin" type="date" value="" size="30" required/><br />
+              <input id="checkin" class="input" name="checkin" type="date" value="" size="30"/><br />
             </div>
             <div class="row row-split last">
               <label for="checkout">CHECK OUT</label><br />
-              <input id="checkout" class="input" name="checkout" type="date" value="" size="30" required/><br />
+              <input id="checkout" class="input" name="checkout" type="date" value="" size="30"/><br />
             </div>
             <div class="row row-split">
               <label for="adults">ADULTS</label><br />
-              <input id="adults" class="input" name="adults" type="text" value="" size="30" required/><br />
+              <input id="adults" class="input" name="adults" type="text" value="" size="30"/><br />
             </div>
             <div class="row row-split last">
               <label for="children">CHILDREN</label><br />
-              <input id="children" class="input" name="children" type="text" value="" size="30" required/><br />
+              <input id="children" class="input" name="children" type="text" value="" size="30"/><br />
             </div>
             <div class="row">
               <label for="message">MESSAGE (optional)</label><br />
