--- a/src/index.html
+++ b/src/index.html
@@ -2,111 +2,65 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Harbor Arms Apartment Hotel</title>
+    <title>HiBlend Health Bar & Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="assets/font-awesome-4.5.0/css/font-awesome.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
-    <header class="header">
-      <div class="contianer">
-
+    <header class="hiblend-header">
+      <div class="hiblend-header-img">
         <nav class="main-nav row">
           <a class="nav-toggle"href="#"></a>
-          <ul>
-            <li><a class="active" href="#about">about</a></li>
+          <a class="nav-logo" href="#"><img src="images/hiblend_logo_white.png" alt=""></a>
+          <ul class="main-menu">
             <li><a href="#menu">menu</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
 
+          <ul class="utility-nav">
+              <li>
+                <a href="https://www.facebook.com/Hiblendcoffee808"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hiblend/"><i class="fab fa-instagram"></i></a>
+              </li>
+          </ul>
+
         </nav>
 
-        <div id="scroll-logo"></div>
-        <div id="small-logo"><img source="images/headerlogo.png"</div>
-
-        <ul class="utility-nav">
-            <li>
-              <a href="https://www.facebook.com/Hiblendcoffee808"><i class="fa fa-facebook" style="font-size: 21px;"></i></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/hiblend"><i class="fa fa-twitter" style="font-size: 21px;"></i></a>
-            </li>
-            <li>
-              <a href="https://www.pinterest.com/HiBlend808/"><i class="fa fa-pinterest-p" style="font-size: 21px;"></i></a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/hiblend/"><i class="fa fa-instagram" style="font-size: 21px;"></i></a>
-            </li>
-            <!-- <li class="searchbar"> <input type="text" placeholder="Search"><a href="#" class="searchbar-toggle"><i class="fa fa-search" style="font-size: 21px;"></i></a>
-           </li> -->
-        </ul>
-
-        <a href="#"><img class="big-logo"src="images/headerlogo.png" alt="" /></a>
       </div>
-
 
     </header>
 
 
     <section id="home" class="home">
-      <section class="row vertical-align">
+      <section class="row home-intro">
         <div class="container">
           <div class="img">
             <img class="change" src="images/home.jpg" alt="drinks" />
+            <h2>our food</h2>
+            <h2>is all natural</h2>
+            <h1>&</h1>
+            <h2>locally sourced</h2>
           </div>
           <div class="col">
-            <h1>stay <br>
-              healthy  <br> friends!</h1>
+            <h1>stay healthy friends!</h1>
             <p>
-              HiBlend Health Bar & Cafe is providing farm fresh to table, seasonal organic choices, all natural, non GMO ingredients, focusing on simple & delicious flavors & health. Together lets live a healthier lifestyle!
+              HiBlend Health Bar & Cafe is committed to sourcing all natural, farm fresh, organic, non-GMO & locally made ingredients. We focus on simple, delicious flavors & health. Together lets live a healthier lifestyle!
             </p>
           </div>
           </section>
-          <a href="#about"><img class="scroll"src="images/scroll.jpg" alt="" /></a>
         </div>
       </section>
-
-
-    <section class="about">
-      <section class="row">
-
-        <!-- <img src="images/about.jpg" alt="" /> -->
-        <h4 id="about">ABOUT</h4>
-        <div class="container">
-
-          <!--about header-->
-          <h1>our <br> journey...</h1>
-          <p>
-            HiBlend Health Bar & Cafe's concept has been created by three brothers, Miles and Joey Sugahara, and Jason Chang. Two brothers by blood, one built on the brotherhood and bond in the making since elementary school days.
-          </p>
-
-          <p>
-            Fascination with clean and healthy living, simply wanting fresh tasty ingredients set us off into a journey into local farms all over the island. Almost two years ago, when we first set sail on the mission to obtain the best, most affordable ingredients to provide for our clientele. We've physically walked the soils of farms, many dead end phone calls were made, waiting lists which never seem to ever come up, no return calls, and slim pickings in variety of produce needed. Never giving up making connections and gathering information at multiple farmers markets. <a href="#/" id="more">More</a>
-          </p>
-
-
-          <p id="hidden">
-            Then one day a friend's information on a farm doing no spray organic practice led us back to our old stomping grounds of Kaiser High School. The farm is located in the back of the high school, rand is run by Bill and Karian, named Wally's Farm. This was a dream come true to be able to work with them for over a year, participating in recycling ourcomposts and coffee grounds weekly, harvesting our own produce 3-4 days a week, and helping to clean the farm when needed. We are very thankful for the relationship we've built with Bill and Karian. As we went on unfortunately our demands grew and we knew we had to expand.
-          </p>
-
-          <p id="hidden">
-            Most recently we began working with the wonderful Kahumana Organic Farm in Waianae which we are very pleased with their fresh produce and service. Its been a long journey and we have learned a lot. We have grown as a business as well as people and we are very proud of what we have accomplished to this day. It definitely has been a battle of staying true to ourselves and concept to carry out what we believe in. Understanding and learning what it truly means to support local for a better more sustainable Hawaii. We do outsource for certain produce due to the limited resources here on the islands. Some produce just can't be obtained locally or some costs are just too high to make it as a local business. We truly do our best to offer our people a variety of local, farm fresh, organic, all natural, and non GMO ingredients. <a href="#/" id="less">Less</a>
-          </p>
-
-          <h2>"know what you <br> put in your body"</h2>
-
-        </div>
-      </section>
-    </section>
 
 
     <section class="menu">
       <section class="grid">
       </section>
-        <!-- <div class="container"> -->
 
-          <!-- <img class="menu-grid"src="images/menu grid.jpg" alt="" /> -->
           <h4 id="menu">MENU</h4>
           <!--menu header-->
           <nav class="subnav">
@@ -704,13 +658,6 @@
       <h4 id="contact">CONTACT</h4>
       <div class="row">
 
-        <!--contact header-->
-
-        <!-- <div class="background"> -->
-          <!-- <img src="images/contact.jpg" alt="Store" /> -->
-        <!--google map-->
-
-      <!-- </div class="container"> -->
       <div class="contact-image">
 
       </div>
@@ -737,33 +684,6 @@
           </p>
         </div>
 
-        <div class="item">
-          <h2 class="subheading">Vendor inquiries please contact:</h2>
-          <p>
-            Joey Sugahara <br>
-            Ph: (808) 255-2182 <br>
-            <a href="#">Email: joeysugahara@gmail.com</a>
-          </p>
-        </div>
-
-        <div class="item">
-          <h2 class="subheading">Press inquiries please contact:</h2>
-          <p>
-            Miles Sugahara <br>
-            Ph: (808) 790-1326 <br>
-            <a href="#">Email: besthandaa@yahoo.com</a>
-          </p>
-        </div>
-
-        <div class="item">
-          <h2 class="subheading">For employment please contact:</h2>
-          <p>
-            Jason Chang <br>
-            Ph: (808) 721-7303 <br>
-            <a href="#">Email: hiblendcoffee@gmail.com</a>
-          </p>
-        </div>
-        </div>
         <div class="map">
           <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:360px;width:100%;'><div id='gmap_canvas' style='height:360px;width:100%;'></div><div><small><a href="http://embedgooglemaps.com">									embed google maps							</a></small></div><div><small><a href="http://www.autohuren.world/">auto huren</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(21.294654,-157.841542,102),mapTypeId: google.maps.MapTypeId.HYBRID};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.294654,-157.841542,102)});infowindow = new google.maps.InfoWindow({content:'<strong>HBlend Health Bar & Cafe</strong><br>661 Keeaumoku Street #105A  Honolulu, Hawaii 96814<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
         </div>
